--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,6 @@
         <Button x:Name="StartReadData" Click="StartReadData_Click" Grid.Column="0" Grid.Row="0" Content="Start"/>
         <Button x:Name="StopReadData" Click="StopReadData_Click" Grid.Row="1" Content="Stop"/>
         <ComboBox x:Name="BoxComPorts" Grid.Column="2" SelectionChanged="BoxComPorts_SelectionChanged"/>
-        <DataGrid x:Name="DataGridPort" IsReadOnly="True" AutoGenerateColumns="False" Grid.Column="1" Grid.RowSpan="3"/>
+        <DataGrid x:Name="DataGridPort" IsReadOnly="True" AutoGenerateColumns="False" Grid.Column="1" Grid.RowSpan="3" ItemsSource="{DynamicResource ResourceKey=DComPort}"/>
     </Grid>
 </Window>
